# cmake-problem-1

./: CMakeLists.txt
lzma/: CMakeLists.txt  mylib.cpp
lzma/include/: mylib.hpp
main/: CMakeLists.txt  main.cpp
